--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <h2>Here are a couple of my favourite recipes</h2>
+        <h1>Rad Recipes</h1>
+        <img src='homer.gif' alt='Homer Simpson is so bad at cooking that he sets fire to his cornflakes and milk'>
+        <h2>Here are a couple of recipes for when you really don't feel like cooking</h2>
             <ul>
                 <li><a href='recipes/greek_salad.html'>Greek Salad</a></li>
                 <li><a href='recipes/crispy_ramen.html'>Crispy Ramen</a></li>
