Changed an list item element from <ls> to the corrent <li>.

--- a/recipes/greek_salad.html
+++ b/recipes/greek_salad.html
@@ -5,7 +5,7 @@
 <h3>Ingredients</h3>
     <ul>
         <li>Feta</li>
-        <li>Cherry Tomatoes</ls>
+        <li>Cherry Tomatoes</li>
         <li>Cucumber</li>
         <li>Kalamata Olives</li>
         <li>Red Onion</li>
