The previously mentioned index.html which I didn't add during my last commit and push. Containing new cornflakes recipe.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <ul>
                 <li><a href='recipes/greek_salad.html'>Greek Salad</a></li>
                 <li><a href='recipes/crispy_ramen.html'>Crispy Ramen</a></li>
+                <li><a href='recipes/cornflakes.html'>Cornflakes</a></li>
             </ul>
     </body>
 </html>
