Additional note added to cornflakes.html.

--- a/recipes/cornflakes.html
+++ b/recipes/cornflakes.html
@@ -1,5 +1,6 @@
 <h1>Cornflakes</h1>
 <img src='../recipes/cornflakes.jpg' alt='Picture of some cornflakes'>
+<p>What, I couldn't find a smaller cornflake image? I hate cornflakes and milk.</p>
 <h2>Description</h2>
 <p>Unless your name is Homer Simpson, this is just about as easy as it gets.</p>
 <h3>Ingredients</h3>
