Corrected some spelling mistakes.

--- a/recipes/greek_salad.html
+++ b/recipes/greek_salad.html
@@ -1,7 +1,7 @@
 <h1>Greek Salad</h1>
 <img src='../recipes/greek_salad.jpeg' alt='Picture of a Greek Salad'>
 <h2>Description</h2>
-<p>As the name suggests, this is a classic Greek dish, perfect for a light meal or as an accompaniment to a main meal. Not only is this salad delicious and easy to make, it is also makes for a healthy standalone option with it's balance of vegatables and natural fats from the feta, kalamata olives and olive oil.</p>
+<p>As the name suggests, this is a classic Greek dish, perfect for a light meal or as an accompaniment to a main meal. Not only is this salad delicious and easy to make, it is also makes for a healthy standalone option with its balance of veggies and natural fats from the feta, kalamata olives and olive oil.</p>
 <h3>Ingredients</h3>
     <ul>
         <li>Feta</li>
@@ -21,8 +21,8 @@
         <li>Cut your cucumber legnthwise, then slice into semi-circles. Add to the bowl.</li>
         <li>Cut your green pepper into strips and add to the bowl.</li>
         <li>Peel and chop your red onion in half. Make 2-3 slices of onion, break them apart and add them to the bowl.</li>
-        <li>Add salt and <em>some</em> of the origano and mix together.</li>
-        <li>Add the kalamata olives and crumble in the feta. Depending on how you like it, crumble the feta into small or large peice (I usually opt for large)</li>
-        <li>Add a generous amount of extra virgin olive oil and the remaining oregano over the top</li>
+        <li>Add salt and <em>some</em> of the oregano and mix together.</li>
+        <li>Add the kalamata olives and crumble in the feta. Depending on how you like it, crumble the feta into small or large peice (I usually opt for large).</li>
+        <li>Add a generous amount of extra virgin olive oil and the remaining oregano over the top.</li>
         <li>Give it a final careful mix and enjoy!</li>
     </ol>
