--- a/recipes/crispy_ramen.html
+++ b/recipes/crispy_ramen.html
@@ -1,10 +1,10 @@
 <h1>Crispy Ramen</h1>
 <img src='../recipes/ramen.jpg' alt='Picture of Damae Sesame Ramen Packet'>
 <h2>Description</h2>
-<p>Okay, it might at some point seem that this is a weird meal, but this shit is crazy good. Crispy fried sesame ramen will change your life.</p>
+<p>Okay, it might at some point seem that this is a weird meal, but it is crazy good. Crispy fried sesame ramen will change your life.</p>
 <h3>Ingredients</h3>
     <ul>
-        <li>You could probably use other ramen brands or flavours, but my go-to is Damae Sesame Ramen.</li>
+        <li>You could probably use other ramen brands and/or flavours, but my go-to is Damae Sesame Ramen.</li>
         <li>Sesame Oil (extra)</li>
         <li>A little tin of sweet corn</li>
         <li>An egg, boiled/fried/poached (optional)</li>
