I updated some wording in the endex and recipe page html files.

--- a/recipes/cornflakes.html
+++ b/recipes/cornflakes.html
@@ -1,6 +1,6 @@
 <h1>Cornflakes</h1>
 <img src='../recipes/cornflakes.jpg' alt='Picture of some cornflakes'>
-<p>What, I couldn't find a smaller cornflake image? I hate cornflakes and milk.</p>
+<p>What, I couldn't find a smaller cornflake image?</p>
 <h2>Description</h2>
 <p>Unless your name is Homer Simpson, this is just about as easy as it gets.</p>
 <h3>Ingredients</h3>
@@ -10,7 +10,7 @@
     </ul>
 <h3>Steps</h3>
     <ol>
-        <li>Add cornflake to your favourite bowl.</li>
+        <li>Add cornflakes to your favourite bowl.</li>
         <li>Add your milk of choice.</li>
         <li>If - and only if - your cornflakes don't immediately catch on fire, eat and enjoy.</li>
     </ol>
