--- a/recipes/greek_salad.html
+++ b/recipes/greek_salad.html
@@ -1,7 +1,7 @@
 <h1>Greek Salad</h1>
 <img src='../recipes/greek_salad.jpeg' alt='Picture of a Greek Salad'>
 <h2>Description</h2>
-<p>As the name suggests, this is a classic Greek dish, perfect for a light meal or as an accompaniment to a main meal. Not only is this salad delicious and easy to make, it is also makes for a healthy standalone option with its balance of veggies and natural fats from the feta, kalamata olives and olive oil.</p>
+<p>As the name suggests, this is a classic Greek dish, perfect for a light meal or as an accompaniment to a main meal. Not only is this salad delicious and easy to make, it is also makes for a light and healthy standalone option with its balance of veggies and natural fats from the feta, kalamata olives and olive oil.</p>
 <h3>Ingredients</h3>
     <ul>
         <li>Feta</li>
