--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <head>
         <title>Rad Recipes</title>
         <meta charset='utf-8'> 
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
         <h1>Rad Recipes</h1>
-        <img src='homer.gif' alt='Homer Simpson is so bad at cooking that he sets fire to his cornflakes and milk'>
+        <img class="homer" src='homer.gif' alt='Homer Simpson is so bad at cooking that he sets fire to his cornflakes and milk'>
         <h2>Here are some <em>rad</em> recipes for when you really don't feel like cooking.</h2>
-            <ul>
+            <ul class="recipe_list">
                 <li><a href='recipes/greek_salad.html'>Greek Salad</a></li>
                 <li><a href='recipes/crispy_ramen.html'>Crispy Ramen</a></li>
                 <li><a href='recipes/cornflakes.html'>Cornflakes</a></li>
